# match-management-system

./: .gitignore  README.md  df.csv  glue.py  match.csv  match_aggre.ipynb  mdp_sugg.csv  pruner.ipynb  test.py  testing.ipynb
aw_to_mw_synchronizer/: aw_to_mw_synchronizer.py  pyproject.toml  testing.ipynb
data/: .~lock.1st_run.csv#  .~lock.match_warehouse.csv#  1st_run.csv  2nd_run.csv  customer_audit_library.csv  fastlane.csv  fastlane_successful.csv  fastlane_unsuccessful.csv  match_library_to_mw.xlsx  match_warehouse.parquet
match_deleter/: match_deleter.py
match_generator/: macth_geenrator.py  match_geenrator.py  match_generator.py  pyproject.toml  testing.ipynb
match_generator/match_generator/: runner.py
match_generator/match_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
match_generator/match_generator/aggregator/: aggregator.py
match_generator/match_generator/data_loader/: data_loader.py  hudi_writer.py
match_generator/match_generator/data_reader/: data_reader.py
match_generator/match_generator/extractor/: data_reader.py
match_generator/match_generator/loader/: data_loader.py
match_generator/match_generator/pruner/: pruner.py  pruner.txt
match_generator/match_generator/transformer/: aggregator.ipynb  aggregator.py  pruner.py
match_generator/src/: runner.py
match_generator/src/aggregator/: aggregator.ipynb  aggregator.py
match_generator/src/data_loader/: data_loader.py
match_generator/src/data_reader/: data_reader.py
match_generator/src/pruner/: pruner.py  pruner.txt  pruniner old.ipynb  pruniner.ipynb
(+34 files in other folders)
